--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
               <i class="uil uil-brackets-curly home__icon"></i>
             </a>
 
+            <a href="https://instagram.com/mdgufranyt/" target="_blank" class="home__social-icon">
+              <i class="uil uil-instagram home__icon"></i>
+            </a>
+
+            <a href="https://twitter.com/mdgufranyt/" target="_blank" class="home__social-icon">
+              <i class="uil uil-twitter-alt home__icon"></i>
+            </a>
+
           </div>
           <div class="home__img">
             <svg class="home__blob" viewBox="0 0 200 187" xmlns="http://www.w3.org/2000/svg"
